vlib/v/checker/tests/float_lit_exp_not_integer_err.out
vlib/v/checker/tests/float_lit_exp_not_integer_err.vv:2:17: error: exponential part should be integer
    1 | fn main() {
    2 |     println(45e2.5)
      |                 ^
    3 | }
