vlib/v/checker/tests/float_lit_exp_not_integer_err.vv
fn main() {
    println(45e2.5)
}
